Add fullscreen examples.

--- a/tests/dummy/app/templates/components/in-app-messages-example.hbs
+++ b/tests/dummy/app/templates/components/in-app-messages-example.hbs
@@ -4,7 +4,6 @@
   Slide-Up Example
 {{/paper-button}}
 
-
 <h3>Modal In-App Message</h3>
 
 {{#paper-button raised=true onClick=(action showModal)}}
@@ -27,4 +26,16 @@
 
 {{#paper-button raised=true onClick=(action showModalWithTwoButtons)}}
   Modal With Two Buttons Example
+{{/paper-button}}
+
+<h3>Fullscreen In-App Message</h3>
+
+{{#paper-button raised=true onClick=(action showFullWithOneButton)}}
+  Fullscreen Modal With One Button Example
+{{/paper-button}}
+
+<br />
+
+{{#paper-button raised=true onClick=(action showFullWithTwoButtons)}}
+  Fullscreen Modal With Two Buttons Example
 {{/paper-button}}
