Add example test.

--- a/tests/dummy/app/templates/components/in-app-messages-example.hbs
+++ b/tests/dummy/app/templates/components/in-app-messages-example.hbs
@@ -12,7 +12,7 @@
 
 <br />
 
-{{#paper-button raised=true onClick=(action showModalWithTransition)}}
+{{#paper-button id='trigger-modal-with-transition' raised=true onClick=(action showModalWithTransition)}}
   Modal With Transition Example
 {{/paper-button}}
 
