--- a/tests/dummy/app/templates/components/in-app-messages-example.hbs
+++ b/tests/dummy/app/templates/components/in-app-messages-example.hbs
@@ -18,13 +18,13 @@
 
 <br />
 
-{{#paper-button raised=true onClick=(action showModalWithOneButton)}}
+{{#paper-button id='trigger-modal-with-one-button' raised=true onClick=(action showModalWithOneButton)}}
   Modal With One Button Example
 {{/paper-button}}
 
 <br />
 
-{{#paper-button raised=true onClick=(action showModalWithTwoButtons)}}
+{{#paper-button id='trigger-modal-with-two-buttons' raised=true onClick=(action showModalWithTwoButtons)}}
   Modal With Two Buttons Example
 {{/paper-button}}
 
