--- a/tests/dummy/app/templates/components/exit-intent-example.hbs
+++ b/tests/dummy/app/templates/components/exit-intent-example.hbs
@@ -1,6 +1,6 @@
 {{#ember-markdown-section}}
   If you mouse out of this page to the URL bar, you should see a modal. If you set
-  the {{#link-to 'index'}}`logExitIntent` configuration values{{/link-to}} to `true`,
+  the {{#link-to 'configuration'}}`logExitIntent` configuration values{{/link-to}} to `true`,
   you won't directly see a modal, but the default event will be logged with appboy.
   Your team can then wire events to the custom event `exit intent` to show modals
   and stuff.
