--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -6,7 +6,8 @@
       {{#paper-toolbar-tools}}
         Ember Appboy
         <span class='flex'></span>
-          <a href='https://github.com/blimmer/ember-appboy'>{{fa-icon 'github' size='lg'}}</a>
+          <a class='icon-link' href='https://benlimmer.com' title='About the Author'>{{fa-icon 'user' size='lg'}}</a>
+          <a class='icon-link' href='https://github.com/blimmer/ember-appboy' title='View the Source'>{{fa-icon 'github' size='lg'}}</a>
       {{/paper-toolbar-tools}}
     {{/paper-toolbar}}
 
