--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -32,16 +32,10 @@ body > div.ember-view {
   display: flex;
 }
 
-.site-nav-container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.inner-sidenav {
-  position: relative;
+md-sidenav md-toolbar {
+  .icon-link:not(:first-of-type) {
+    padding-left: 20px;
+  }
 }
 
 .content {
