--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -35,6 +35,7 @@ body > div.ember-view {
 md-sidenav {
   md-content {
     a {
+      color: inherit;
       font-size: 1.2em;
       text-decoration: none;
 
