--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -26,6 +26,10 @@
     {{#paper-content padding=true}}
       {{#link-to 'exit-intent'}}Exit Intent{{/link-to}}
     {{/paper-content}}
+
+    {{#paper-content padding=true}}
+      {{#link-to 'analytics'}}Analytics{{/link-to}}
+    {{/paper-content}}
   {{/paper-sidenav}}
 
   <div class="flex layout-column content" tabindex="-1" role="main">
