Add news feed page.

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -30,6 +30,10 @@
     {{#paper-content padding=true}}
       {{#link-to 'analytics'}}Analytics{{/link-to}}
     {{/paper-content}}
+
+    {{#paper-content padding=true}}
+      {{#link-to 'news-feed'}}News Feed{{/link-to}}
+    {{/paper-content}}
   {{/paper-sidenav}}
 
   <div class="flex layout-column content" tabindex="-1" role="main">
