Deprecate in favor of ember-braze

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -3,48 +3,8 @@
 {{/paper-toolbar}}
 
 <div>
-  <h1 id="what-is-ember-appboy-">What is ember-appboy?</h1>
+  <h1 id="what-is-ember-appboy-">DEPRECATED</h1>
   <p>
-    ember-appboy exposes the <a href="https://github.com/Appboy/appboy-web-sdk">appboy-web-sdk</a>
-    to your Ember app. It integrates the native Web SDK package into the Ember environment.
-  </p>
-  <p>
-    For more information on Appboy, visit <a href="http://appboy.com/">Appboy.com</a>.
-  </p>
-
-  <h1 id="installation">Installation</h1>
-  <p>
-    Installing ember-appboy is easy. Run:
-  </p>
-  {{code-snippet name="install.sh"}}
-
-  <h1 id="usage">Usage</h1>
-  <p>
-    By default, this addon merges an
-    <a href="https://github.com/blimmer/ember-appboy/blob/master/addon/instance-initializers/appboy.js">instance-initializer</a>
-    into your app to integrate Appboy's functionality into the Ember environment.
-  </p>
-  <p>
-    To utilize additional Appboy functionality, this addon exposes the SDK as an
-    ES6 Module. To use it, you can import it like any other module:
-  </p>
-  {{code-snippet name='es6-usage.js'}}
-
-  <p>
-    For more information on the SDK, please check out the
-    <a href="https://js.appboycdn.com/web-sdk/1.5/doc/module-appboy.html">docs</a>.
-  </p>
-
-  <h1 id="configuration">Configuration</h1>
-  <p>
-    You might want to configure ember-appboy to meet your needs. Read more about
-    configuration {{#link-to 'configuration'}}here{{/link-to}}.
-  </p>
-
-  <h1 id="legal">Legal</h1>
-  <p>
-    This addon is in no way affiliated with Appboy. It is developed by
-    <a href="https://benlimmer.com">Ben Limmer</a> and is simply a wrapper around the
-    appboy-web-sdk to make integration with Ember apps simple.
+    Please use <a href='https://blimmer.github.io/ember-braze/'>ember-braze</a> instead.
   </p>
 </div>
